# ros2_drone

./: .gitignore  README.md
docs/: AERODrop_Final_Project_Report.docx
src/drone_delivery_system/: package.xml  setup.cfg  setup.py
src/drone_delivery_system/config/: delivery_params.yaml
src/drone_delivery_system/drone_delivery_system/: __init__.py  aeropin.py  coordinate_mission_controller.py  payload_manager.py  yolo_search_controller.py
src/drone_delivery_system/models/: delivery_box.sdf
src/sjtu_drone_bringup/config/: drone.yaml
src/sjtu_drone_bringup/launch/: sjtu_drone_gazebo.launch.py
src/sjtu_drone_control/: setup.py
src/sjtu_drone_control/sjtu_drone_control/: open_loop_control.py  teleop.py
src/sjtu_drone_control/sjtu_drone_control/drone_utils/: controllers.py
src/sjtu_drone_description/include/sjtu_drone_description/: pid_controller.h  plugin_drone.h  plugin_drone_private.h
src/sjtu_drone_description/src/: pid_controller.cpp  plugin_drone_gz.cpp  plugin_drone_private.cpp
src/sjtu_drone_description/urdf/: sjtu_drone.urdf.xacro
src/sjtu_drone_description/worlds/: home.sdf  rubicon.sdf
